--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-email",
-  "version": "1.4.1",
+  "name": "@essent/nativescript-email",
+  "version": "1.4.2",
   "description": "Email plugin for your NativeScript app",
   "main": "email",
   "typings": "email.d.ts",
